# Inu_3D_Renderer

./: .gitignore  CMakeLists.txt  build.bat  commit_dist.bat  mac_script.txt  notes.txt  out_resources_update.bat  update_dist.bat
resources/avacado/: Avocado.gltf
resources/bone_mesh/: bone_mesh.gltf  custom_bone_mesh.blend1  custom_bone_mesh.gltf
resources/box/: Box.gltf
resources/box_interleaved/: BoxInterleaved.gltf
resources/box_textured/: BoxTextured.gltf
resources/box_textured_non_power_of_2/: BoxTexturedNonPowerOfTwo.gltf
resources/box_vertex_colors/: BoxVertexColors.gltf
resources/box_with_spaces/: Box With Spaces.gltf
resources/cartoon_car/: combined.gltf
resources/cube_non_smooth_face/: Cube.gltf
resources/custom_light/: light_mesh.blend  light_mesh.blend1  light_mesh.gltf
resources/duck/: Duck.gltf
resources/ferrari_enzo/: license.txt  scene.gltf
resources/junkrat/: license.txt  scene.gltf
resources/reap_the_whirlwind/: scene.gltf
resources/rigged_figure/: blender_export.gltf
resources/shaders/: debug.sprj  dir_light.frag  dir_light.geo  dir_light.geo2  light.vert  model.frag  model.vert  offline_to_online.frag  offline_to_online.vert
resources/shaders/shaders/: debug_SimpleGS.glsl
resources/stylized_mushrooms/: scene.gltf
resources/suzan/: Suzanne.gltf
resources/two_cylinder_engine/: 2CylinderEngine.gltf
resources/yusuke_urameshi/: license.txt  scene.gltf
src/: main.cpp
src/animation/: animation_internal.cpp  animation_internal.h  interpolation.cpp  interpolation.h
src/gfx/: gfx.cpp  gfx.h  light.cpp  light.h  online_renderer.cpp  online_renderer.h
src/gfx/opengl/GL/: glew.h
src/model_loading/: model_internal.cpp  model_internal.h
src/model_loading/gltf/: gltf.cpp  gltf.h
src/scene/: camera.cpp  camera.h  scene.cpp  scene.h  transform.cpp  transform.h
src/utils/: app_info.h  general.cpp  general.h  inu_math.cpp  inu_math.h  inu_time.cpp  inu_time.h  log.h  mats.cpp  mats.h  quaternion.cpp  quaternion.h  test.cpp  vectors.cpp  vectors.h
src/windowing/: window.cpp  window.h
